<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_fav"
    app:startDestination="@id/navigation_fav">

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.flagcamp.secondhands.ui.fav.FavFragment"
        android:label="@string/app_fav"
        tools:layout="@layout/fragment_fav" >
        <action
            android:id="@+id/action_navigation_fav_to_navigation_details"
            app:destination="@id/navigation_detail"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.flagcamp.secondhands.ui.productDetail.ProductDetailFragment"
        android:label="@string/app_detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="product"
            app:argType="com.flagcamp.secondhands.model.Product"/>
        <action
            android:id="@+id/action_navigation_detail_to_navigation_message"
            app:destination="@id/navigation_message" />
        <action
            android:id="@+id/action_navigation_detail_to_navigation_visitor_view_profile"
            app:destination="@id/navigation_visitor_view_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.flagcamp.secondhands.ui.chat.MessageListFragment"
        android:label="@string/app_message"
        tools:layout="@layout/fragment_message_list">
        <argument
            android:name="user"
            app:argType="com.flagcamp.secondhands.model.User" />
    </fragment>

    <fragment
        android:id="@+id/navigation_visitor_view_profile"
        android:name="com.flagcamp.secondhands.ui.profile.VisitorViewProfileFragment"
        android:label="@string/app_visitor_view_profile"
        tools:layout="@layout/fragment_visitor_view_profile">
        <action
            android:id="@+id/action_navigation_visitor_view_profile_to_navigation_message"
            app:destination="@id/navigation_message" />
        <argument
            android:name="user"
            app:argType="com.flagcamp.secondhands.model.User" />
    </fragment>

</navigation>